[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydracuda"
version = "0.1.0"
description = "Hybrid Runtime Access Control for Untrusted Delegated Actions. Runtime policy enforcement proxy for AI tool calls."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ai", "security", "mcp", "llm", "guardrails", "policy"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "pyyaml>=6.0",
    "aiosqlite>=0.19",
]

[project.urls]
Homepage = "https://github.com/Xtrinel-Group/HYDRACUDA"
Issues = "https://github.com/Xtrinel-Group/HYDRACUDA/issues"

[project.scripts]
hydracuda = "hydracuda.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hydracuda"]
